starwars.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starwars
spec:
  selector:
    matchLabels:
      app: starwars
  replicas: 2
  template:
    metadata:
      labels:
        app: starwars
    spec:
      containers:
        - name: starwars
          image: k8s-node-app_nodeapp
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: starwars-service
spec:
  selector:
    app: starwars
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 31000
