starwars.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
spec:
  ingressClassName: nginx
  rules:
    - host: billytest.hopto.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: starwars
                port:
                  number: 80
